[package]
name = "xmz_client"
version = "0.2.2"
authors = ["Stefan Müller <s.mueller@it.kls-glt.de>"]
description = "Befehlszeilen Client für die 'xMZ-Mod-Touch'-Platform"
homepage = "https://gaswarnanlagen.com/xmz"
repository = "https://github.com/Kliemann-Service-GmbH/xMZ-Mod-Touch-Client"
readme = "README.md"
keywords = ["xmz", "xMZ-Mod-Touch"]
license = "GPL-2.0"

[[bin]]
name = "xmz-client-bin"
path = "src/xmz-client-bin.rs"

[dependencies]
nanomsg = "0.6"
clap = { version = "2", features = ["unstable"] }
